--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
         </section>
 
         <footer>
-        Last updated on 2/10/2021.
+        Last updated on 2/2021.
         </footer>
 
       </div>
